[package]
name = "yab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serenity = { version = "0.12.0", features = ["framework", "model", "client", "rustls_backend", "gateway", "builder"], default-features = false }
shuttle-runtime = "0.35.2"
shuttle-secrets = "0.35.2"
shuttle-serenity = { version = "0.35.2", features = ["serenity-0-12-rustls_backend"], default-features = false }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.8"
tracing = "0.1.40"
