[package]
name = "yab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serenity = { version = "0.12.4", features = ["framework", "model", "client", "rustls_backend", "gateway", "builder"], default-features = false }
shuttle-runtime = "0.51.0"
shuttle-secrets = "0.42.0"
shuttle-serenity = "0.51.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
